k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sln-bookings
  labels:
    name: sln-bookings
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sln-bookings.nova-hub.app
      secretName: sln-bookings-tls
  rules:
  - host: changelog.nova-hub.app
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sln-bookings
            port: 
              number: 80
